pruebar ingreso global dado cambio de path

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,4 @@
 /Actividad 1/datos/
 /Actividad 2/lasso_separado.py
+/Actividad 2/Act2Entrega.zip
+/Actividad 2/Lasso_Reg_Ejercicio_para_entenderlo.ipynb
