--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,6 @@
-/Actividad 1/datos/
-/Actividad 2/lasso_separado.py
-/Actividad 2/Act2Entrega.zip
-/Actividad 2/Lasso_Reg_Ejercicio_para_entenderlo.ipynb
+/Actividad_1/datos/
+/Actividad_2/lasso_separado.py
+/Actividad_2/Act2Entrega.zip
+/Actividad_2/Lasso_Reg_Ejercicio_para_entenderlo.ipynb
+/Actividad_3/data/Gaia_NaN.csv
+/Actividad_3/data/metadatos.csv
