--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,5 @@
 /Actividad_2/Lasso_Reg_Ejercicio_para_entenderlo.ipynb
 /Actividad_3/data/Gaia_NaN.csv
 /Actividad_3/data/metadatos.csv
+/Actividad_3/models/
+/Actividad_3/graficos/
