--- a/Actividad_3/data/datos_guardados.yaml
+++ b/Actividad_3/data/datos_guardados.yaml
@@ -64,3 +64,10 @@ columnas:
 - bleed
 - elevation
 - biopsed
+
+
+penalty:
+  alphas: [0.1, 0.5, 1.0, 2.5, 5.0]  
+  alpha: [0.000001, 0.00001, 0.0001, 0.001, 0.01, 0.1, 1, 10, 100, 1000]
+  l1_ratio: [0.1, 0.3, 0.5, 0.7, 0.9]
+  max_iter: [100, 500, 1000, 2000, 5000]
