Taller 2 con graficos entrega final

--- a/.gitignore
+++ b/.gitignore
@@ -2,8 +2,10 @@
 /Actividad_2/lasso_separado.py
 /Actividad_2/Act2Entrega.zip
 /Actividad_2/Lasso_Reg_Ejercicio_para_entenderlo.ipynb
-/Actividad_3/data/Gaia_NaN.csv
-/Actividad_3/data/metadatos.csv
-/Actividad_3/models/
-/Actividad_3/graficos/
+/Actividad_3_Taller1/data/Gaia_NaN.csv
+/Actividad_3_Taller1/data/metadatos.csv
+/Actividad_3_Taller1/models/
+/Actividad_3_Taller1/graficos/
 /Actividad_4/datos/
+/Actividad_5_Taller2/data/
+
